create new filter, and litle redact templates/

--- a/Food_Market_Yard/templates/products.html
+++ b/Food_Market_Yard/templates/products.html
@@ -1,5 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
+
 {% block title %}
 Products
 {% endblock title %}
@@ -27,7 +29,7 @@ Products
                <td>{{ product.name }}</td>
                <td>{{ product.description|truncatewords:2 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price }}</td>
+               <td>{{ product.price|currency:"rub" }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
